--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.1",
     "moment": "^2.30.1",
     "mongoose": "^8.8.3",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7"
   }
 }
